refactor(quic)!: v6 Phase 2b.2 — extract :socket-quic-quiche backend module
Split the Cloudflare quiche QUIC engine out of :socket-quic into a new sibling
module :socket-quic-quiche (jvm/android/linuxX64/linuxArm64). :socket-quic is now
the pure QUIC API/SPI; :socket-quic-quiche depends on it (api) + the root :socket
module (for the transitive BoringSSL symbols the K/N linker relies on).

Moved into :socket-quic-quiche:
  - quiche driver/bindings/engine (QuicheDriver/Api/Cmd/Handles, StreamSlot,
    DriverDatagramAdapter, DriverClock, PathKey, UdpChannel(Factory),
    QuicConfigApplicator, QuicheEngine jvm+linux, Jni/Ffm/Cinterop QuicheApi)
  - the default-engine wrappers (withQuicConnection/withQuicServer/withQuicMux)
    + platformDefaultQuicEngine (jvm/android/linux → QuicheEngine)
  - libs/quiche, src/jni/quiche_jni.c, Quiche.def cinterop, all cargo/JNI/FFM/
    Android-JNI/quicEchoJar/native-classifier/KSP/fuzz/harness build wiring
  - the quiche test suites (commonTest integration set, jvmTest, linuxTest,
    commonJvmTest, androidInstrumentedTest, sharedJvmTestProtocol)

Stayed in :socket-quic (pure SPI): QuicEngine/Connection/Server/Scope/ByteStream/
StreamMux/StreamId/ConnectionState/Options/TlsConfig/Error/Close/StreamException,
AlpnUtils, EngineCapabilities, QuicBufferFactory, UnsupportedQuicEngine, plus the
Apple Network.framework engine (NetworkEngine + NWQuicHelpers cinterop) which moves
to :socket-quic-nw in Phase 2b.3. Three internal symbols the backend needs are now
public (QUIC_MAX_CONN_ID_LEN, requireNativeMemory, quicBufferFactory); the quiche-
specific CongestionControl.quicheValue mapping moved into the backend.

Repointed :socket-http3 native refs and the root harness quicEchoJar to
:socket-quic-quiche. :socket-http3 itself does NOT compile in this interim state —
its WithHttp3Connection/Server call withQuicConnection/withQuicServer, which return
via the :socket-quic-default bundle (Phase 2b.4 → rewire in 2b.5). This is the
intended Phase-2b.2